# TW_MDAP

./: .gitignore  main.py  pyproject.toml
scripts/: abaqus_initial.py
src/abaqus_scripts/preprocessing/: abaqus_operation.py  model_build.py
src/abaqus_scripts/simulation/: step_set.py
src/data_processing/cutting_force_pred/: cutting_force_coefficient_identification.py  cutting_force_prediction.py
src/data_processing/residual_stress_pred/: ANN_learning.py  MIRS_genetic_fitting_exponentially_damped_cosine_model.py  MIRS_genetic_fitting_hyperbolic_tangent_model.py
